--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <div class="timer-container">
-        <h1 class="timer__text open-sans">0:00</h1>
+        <h1 class="timer__text open-sans">...</h1>
     </div>
 
-    <div class="frascos-container"></div>
-
+        <div class="frascos-container"></div>
     <div class="backdrop-container" id="introModal">
         <div class="modal-container">
             <div class="modal__header">
@@ -23,13 +22,12 @@
             <div class="modal__body">
                 <div class="open-sans">
                     <p>
-                    Seu objetivo é: <b>Organizar todos os frascos de modo que coloque as esferas do respectivo frasco no seu frasco oposto.</b>
+                    Seu objetivo é: <b>Organizar todos os frascos de modo que coloque as esferas organizadas em seus frascos sinalizados por cores.</b>
                     Dependendo da dificuldade, esta missão pode ficar mais dificil. 
                     </p>
-
-                    <p>Escolha Sua dificuldade:</p>
                 </div>
 
+                <p class="open-sans">Escolha Sua dificuldade:</p>
                 <div class="button-container open-sans">
                     <div>
                         <button class="difficult__button" id="easyMode">Fácil</button>
